<resources>
    <string name="app_name">Ahoy</string>
    <string name="country">Country</string>
    <string name="select_country">Select Country</string>
    <string name="select_age">Select Age</string>
    <string name="im_user">I\'m user</string>
    <string name="settings">Settings</string>
    <string name="map_types">Map Types</string>
    <string name="hybrid_map">Hybrid</string>
    <string name="normal_map">Normal</string>
    <string name="satellite_map">Satellite</string>
    <string name="terrain_map">Terrain</string>
    <string name="save">Save</string>
    <string name="enable_localization">Please enable localization</string>
    <string name="reconnect_localization">Continue</string>
    <string name="search_localizations">Search Localizations</string>
    <string name="your_localization">Your Localization</string>
    <string name="enable_internet_connection">Please enable internet connection</string>
    <string name="show_current_position_textview">Show current position</string>
    <string name="reconnect">Reconnect</string>
    <string name="event_name">Event Name:</string>
    <string name="description">Description:</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="event_location">Event Location:</string>
    <string name="company_name">Company Name:</string>
    <string name="add">Add</string>
    <string name="how_long_should_event_be_active">How long should event be active?</string>
    <string name="hours_from_now">Hours from now</string>
    <string name="local">Local</string>
    <string name="virtual">Virtual</string>
    <string name="additional_information">Additional information:</string>
    <string name="links_etc">Link, bonus code...</string>
    <string name="ends_at">Ends at:</string>
    <string name="country_name">Country name:</string>
    <string name="scan">Scan</string>
    <string name="your_application_is_being_reviewed">Your application is being reviewed</string>
    <string name="login">Log in</string>
    <string name="register">Register</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="enter_email">Enter your e-mail</string>
    <string name="enter_password">Enter your password</string>
    <string name="password_min_characters">The password must be at least 8 characters long!</string>
    <string name="password_do_not_match">The passwords do not match</string>
    <string name="account_created">Account created!</string>
    <string name="account_create_fail">Failed to create an account!</string>
    <string name="verification_link_sent">A verification link has been sent to your e-mail</string>
    <string name="verification_link_sent_fail">Failed to send verification e-mail</string>
    <string name="success">Success!</string>
    <string name="fail">Fail</string>
    <string name="account_is_not_verified">Account is not verified</string>
    <string name="write_something">Write something about your company and why you wanna use Ahoy.</string>
    <string name="please_write">Please fill all fields</string>
    <string name="wait_for_account_verification">Wait for manual verification. After verification you will be able to create your account.</string>
    <string name="verify_your_email">Please verify your e-mail :)</string>
    <string name="temporary_nick">Temporary user name</string>
    <string name="choose_other_temporary_nick">Choose other temporary name</string>
    <string name="send">Send</string>
    <string name="i_already_have_temporary_name">I already have temporary name</string>
    <string name="your_account_request_has_been_rejected">Your account request has been rejected</string>
    <string name="your_account_request_is_not_verified_yet">Your account request is not verified yet</string>
    <string name="your_temporary_nam_should_not_contains">Your temporary name should not contains \".\", \"#\", \"$\", \"[\", \"]\"</string>
    <string name="event_must_have_a_name">Event must have a name"</string>
    <string name="event_must_have_a_desc">Event must have a description"</string>
    <string name="event_must_have_a_localizations">Event must have a localization"</string>
    <string name="event_must_have_a_company_name">Event must have a company name"</string>
    <string name="event_must_last_a_hour">Event must last at least an hour"</string>
    <string name="im_company">I am a company</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="announcement">Announcement</string>
    <string name="announcement_location">Announcement location:</string>
    <string name="ahoy_announcements">Ahoy announcements</string>
    <string name="search">Search</string>
    <string name="search_announcements">Search announcements</string>
    <string name="nick">Nick</string>
    <string name="nick_already_exist">Nick already exist</string>
    <string name="account_does_not_exist">Account does not exist</string>
    <string name="enter_nick">Enter nick</string>
    <string name="log_out">Log out</string>
    <string name="report">Report</string>
    <string name="check_internet_connection">Check internet connection</string>
    <string name="nick_should_not_contain">Your nick should not contains \".\", \"#\", \"$\", \"[\", \"]\"  \" \</string>
    <string name="your_points">Your points: </string>
    <string name="watch_ad_to_get_extra_point">Watch ad to get extra point</string>
    <string name="ad_is_not_ready_yet">Ad is not ready yet</string>
    <string name="come_back_tomorrow_for_next_reward">Come back tomorrow for next reward</string>
    <string name="failed_to_fetch_location">Failed to fetch location</string>
    <string name="points_for_event">Thanks for joining the event! You have earned 2 points!</string>
    <string name="points">points</string>
    <string name="point">point</string>
    <string name="points5">points</string>
    <string name="downloading">Downloading data</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="i_forgot_password">I forgot password</string>
    <string name="reset_password">Reset password</string>
    <string name="link_to_change_your_password_has_been_sent_to_your_email_address">Link to change your password has been sent to your email address</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="terms_of_service_content">
       1. Introduction\n
1.1. These Terms of Service govern your use of the "Ahoy" application provided by Ahoy, and any related services.\n
1.2. By accessing or using the App, you agree to be bound by these Terms of Service. If you do not agree to these terms, please do not use the App.\n
\n
2. Description of the App\n
2.1. The App allows users to add their own events or announcements to the map, as described above.\n
2.2. Users are prohibited from providing location information that does not exist or is not the actual address of a business.\n
2.3. Content shared through the App should not include any profanity or offensive language.\n
2.4. Please note that the duration of events is counted from the current time, and an event may not appear in the App if it has not been approved by a moderator. The moderator\'s working hours are not extended beyond regular business hours (Polish time).\n
\n
3. User Conduct\n
3.1. You agree to use the App only for lawful purposes and in a manner that respects the rights of others.\n
3.2. You are solely responsible for the accuracy and authenticity of the information you provide, including location details.\n
3.3. You agree not to engage in any of the following prohibited activities:\n
a) Submitting false or misleading information, including fake or non-existent locations.\n
b) Uploading, transmitting, or sharing any content that contains offensive, obscene, or inappropriate language.\n
c) Violating any applicable laws or regulations while using the App.\n
\n
4. Content Moderation\n
4.1. The App may employ moderators to review and approve user-submitted events and announcements.\n
4.2. Due to the moderation process, there may be a delay in the appearance of events or announcements within the App.\n
4.3. The moderators\' working hours align with regular business hours (Polish time), and events submitted outside of these hours may experience delays in approval.\n
\n
5. Intellectual Property\n
5.1. The App and its original content, features, and functionality are owned by Ahoy and are protected by international copyright, trademark, patent, trade secret, and other intellectual property or proprietary rights laws.\n
5.2. You may not modify, reproduce, distribute, create derivative works or adaptations of, publicly display, or in any way exploit any of the content or intellectual property found in the App without the prior written consent of Ahoy.\n
\n
6. Privacy\n
6.1. Ahoy respects your privacy and handles your personal information in accordance with its Privacy Policy. By using the App, you consent to the collection, storage, and use of your information as described in the Privacy Policy.\n
\n
7.Limitation of Liability\n
7.1. To the fullest extent permitted by applicable law, Ahoy shall not be liable for any indirect, incidental, special, consequential, or punitive damages, or any loss of profits or revenues, whether incurred directly or indirectly, or any loss of data, use, goodwill, or other intangible losses, resulting from your access to or use of the App.\n
\n
8. Termination\n
8.1. Ahoy may terminate or suspend your access to the App immediately, without prior notice or liability, for any reason whatsoever, including without limitation if you breach these Terms of Service.\n
8.2. Upon termination, your right to use the App will cease immediately.\n
\n
9. Miscellaneous\n
9.1. These Terms of Service constitute the entire agreement between you and Ahoy regarding the use of the App and supersede any prior agreements.\n
9.2. These Terms of Service shall be governed by and construed in accordance with the laws of Poland.\n
9.3. Any disputes arising out of or in connection with these Terms of Service shall be resolved by the courts located in Polish Jurisdiction.\n
    </string>
    <string name="event_will_ends">Event will ends </string>
    <string name="announcement_will_ends">Announcement will ends </string>
    <string name="how_long_should_announcement_be_active">How long should announcement be active?</string>
    <string name="check_if_location_is_correct">Check if location is correct</string>
    <string name="location_not_found">Location not found</string>
    <string name="copy">Copy</string>
    <string name="copied">Copied!</string>
    <string name="app_version_is_not_actual">App version is not actual</string>
    <string name="please_update_application">Please update application.</string>
    <string name="there_is_no_announcements">There is no announcements to load</string>
    <string name="you_already_created_event">You already created event. Delete current event if you wanna create new.</string>
    <string name="general_settings">general settings</string>
    <string name="map_settings">map settings</string>
    <string name="functions">Functions</string>
    <string name="clear_cache">Clear cache</string>
    <string name="done">Done!</string>
    <string name="an_error_occurred">An error occurred</string>
    <string name="information">Information</string>
    <string name="support">Support</string>
    <string name="faq">Frequently Asked Questions</string>
    <string name="our_support_email">If you need help - send message to us - AhoyApp4u@gmail.com</string>
    <string name="copy_support_email_address">Copy address</string>
    <string name="account_settings">Account settings</string>
</resources>