<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Setup.Register">
    <Button
        android:id="@+id/exit"
        android:layout_width="47dp"
        android:layout_height="49dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="21dp"
        android:foreground="@android:drawable/ic_menu_close_clear_cancel"
        android:background="@color/transparent"
        android:onClick="exit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/Email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/temporaryName" />

    <EditText
        android:id="@+id/temporaryName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:ems="10"
        android:hint="@string/temporary_nick"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Email" />

    <EditText
        android:id="@+id/repeat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:ems="10"
        android:hint="@string/repeat_password"
        android:inputType="textPassword"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <TextView
        android:id="@+id/wait"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:textSize="20sp"
        android:text="@string/wait_for_account_verification"
        android:textAlignment="center"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/verifyEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="92dp"
        android:text="@string/verify_your_email"
        android:textAlignment="center"
        android:textSize="20sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wait" />

    <Button
        android:id="@+id/registerBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="26dp"
        android:onClick="register"
        android:text="@string/register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/EnterEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_email"
        android:visibility="gone"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="7dp"
        tools:ignore="MissingConstraints" />
    <TextView
        android:id="@+id/EnterPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_password"
        android:visibility="gone"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="7dp"
        tools:ignore="MissingConstraints" />
    <TextView
        android:id="@+id/PasswordMinimumChar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_min_characters"
        android:visibility="gone"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="7dp"
        tools:ignore="MissingConstraints" />
    <TextView
        android:id="@+id/PasswordDoNotMatch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_do_not_match"
        android:visibility="gone"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="7dp"
        tools:ignore="MissingConstraints" />
    <TextView
        android:id="@+id/AccCreated"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account_created"
        android:visibility="gone"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="7dp"
        tools:ignore="MissingConstraints" />
    <TextView
        android:id="@+id/AccCreateFail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account_create_fail"
        android:visibility="gone"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="7dp"
        tools:ignore="MissingConstraints" />
    <TextView
        android:id="@+id/VerifyLinkSend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verification_link_sent"
        android:visibility="gone"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="7dp"
        tools:ignore="MissingConstraints" />
    <TextView
        android:id="@+id/VerifyLinkSendFail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verification_link_sent_fail"
        android:visibility="gone"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="7dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/FillAll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please_write"
        android:visibility="gone"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="7dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/rejected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_account_request_has_been_rejected"
        android:visibility="gone"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="7dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/notyet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_account_request_is_not_verified_yet"
        android:visibility="gone"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="7dp"
        tools:ignore="MissingConstraints" />





</androidx.constraintlayout.widget.ConstraintLayout>