<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/settings_background"
    tools:context="com.chatoyment.ahoyapp.SettingActivity">

    <Button
        android:id="@+id/buttonExitAdd"
        android:layout_width="47dp"
        android:layout_height="49dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="21dp"
        android:background="@color/transparent"
        android:foreground="@drawable/x_icon"
        android:onClick="exitSettings"
        app:layout_constraintBottom_toTopOf="@+id/scrollView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ScrollView
        android:id="@+id/scrollView4"
        android:layout_width="match_parent"
        android:layout_height="550dp"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonExitAdd">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/round"
            android:backgroundTint="@color/almost_transparent"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/settings"
                android:paddingTop="10dp"
                android:textColor="@color/light_grey2" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:onClick="generalSettings"
                android:text="@string/general_settings"

                android:textColor="@color/white"

                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:onClick="mapSettings"
                android:text="@string/map_settings"

                android:textColor="@color/white" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:onClick="accountSettings"
                android:text="@string/account_settings"
                android:textColor="@color/white" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/light_grey" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/functions"
                android:textColor="@color/light_grey2"  />


            <Button
                android:id="@+id/buttonClearCache"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:onClick="clearCache"
                android:text="@string/clear_cache"
                android:textColor="@color/white" />


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:background="@color/transparent"
                android:onClick="logOut"
                android:text="@string/log_out"
                android:textColor="@color/white" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/light_grey" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/information"
                android:textColor="@color/light_grey2"  />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:background="@color/transparent"
                android:onClick="FAQ"
                android:text="@string/faq"
                android:textColor="@color/white" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:background="@color/transparent"
                android:onClick="showEmailAddress"
                android:text="@string/support"
                android:textColor="@color/white" />

            <LinearLayout
                android:id="@+id/support_linear_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/our_support_email"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="4dp"
                    android:background="@color/transparent"
                    android:onClick="copyAddress"
                    android:text="@string/copy_support_email_address"
                    android:textColor="@color/light_grey" />

            </LinearLayout>

        </LinearLayout>


    </ScrollView>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="40dp"
        android:background="@color/light_grey"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView4" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@color/transparent"
        android:onClick="statute"
        android:text="@string/terms_of_service"
        android:textColor="@color/light_grey2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <TextView
        android:id="@+id/textview_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/done"
        android:visibility="gone"
        />
    <TextView
        android:id="@+id/textview_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/an_error_occurred"
        android:visibility="gone"
        />

    <TextView
        android:id="@+id/textview_copied"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/copied"
        android:visibility="gone"
        />

</androidx.constraintlayout.widget.ConstraintLayout>