<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingActivityUser">

    <Button
        android:id="@+id/buttonExitAdd"
        android:layout_width="47dp"
        android:layout_height="49dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="21dp"
        android:foreground="@android:drawable/ic_menu_close_clear_cancel"
        android:background="@color/transparent"
        android:onClick="exitSettings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/mapTypesSpinner"
        android:layout_width="238dp"
        android:layout_height="32dp"
        android:layout_marginTop="64dp"
        android:entries="@array/map_types_spinner"
        android:text="@string/map_types"
        android:textSize="24sp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <Button
        android:id="@+id/buttnSaveSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="158dp"
        android:layout_marginBottom="63dp"
        android:text="@string/save"
        android:onClick="saveSettings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonReconect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="108dp"
        android:onClick="reconnect"
        android:text="@string/reconnect"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/show_current_position_textview"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mapTypesSpinner" />


</androidx.constraintlayout.widget.ConstraintLayout>